WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117052
Fix double hash lookup in WebSocket::connect loop
https://bugs.webkit.org/show_bug.cgi?id=117052
Summary
Fix double hash lookup in WebSocket::connect loop
Rafael Brandao
Reported
2013-05-30 15:35:38 PDT
Fix double hash lookup in WebSocket::connect loop
Attachments
Patch
(1.58 KB, patch)
2013-05-30 15:36 PDT
,
Rafael Brandao
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rafael Brandao
Comment 1
2013-05-30 15:36:26 PDT
Created
attachment 203386
[details]
Patch
WebKit Commit Bot
Comment 2
2013-05-30 16:14:11 PDT
The commit-queue encountered the following flaky tests while processing
attachment 203386
[details]
: svg/as-image/img-relative-height.html
bug 114140
(author:
zimmermann@kde.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3
2013-05-30 16:15:28 PDT
Comment on
attachment 203386
[details]
Patch Clearing flags on attachment: 203386 Committed
r150991
: <
http://trac.webkit.org/changeset/150991
>
WebKit Commit Bot
Comment 4
2013-05-30 16:15:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug