Fix double hash lookup in WebSocket::connect loop https://bugs.webkit.org/show_bug.cgi?id=117052

Reviewed by Anders Carlsson.

* Modules/websockets/WebSocket.cpp:
(WebCore::WebSocket::connect):


Canonical link: https://commits.webkit.org/135313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150991 268f45cc-cd09-0410-ab3c-d52691b4dbfc