Source/WebCore/Modules/websockets/WebSocket.cpp
@@ -274,13 +274,12 @@ void WebSocket::connect(const String& url, const Vector<String>& protocols, Exce
     }
     HashSet<String> visited;
     for (size_t i = 0; i < protocols.size(); ++i) {
-        if (visited.contains(protocols[i])) {
+        if (!visited.add(protocols[i]).isNewEntry) {
             scriptExecutionContext()->addConsoleMessage(JSMessageSource, ErrorMessageLevel, "WebSocket protocols contain duplicates: '" + encodeProtocolString(protocols[i]) + "'");
             m_state = CLOSED;
             ec = SYNTAX_ERR;
             return;
         }
-        visited.add(protocols[i]);
     }
 
     String protocolString;
